project-images-and-responsiveness

--- a/index.html
+++ b/index.html
@@ -169,10 +169,7 @@
       </div>
       <div class="project-content">
         <div class="project1">
-          <img
-            src="Images/kira-laktionov-_crVEAi7JPA-unsplash.jpg"
-            alt="project-image"
-          />
+          <img src="Images/1746094011210.jpg" alt="project-image" />
           <h3>QR Code Generator</h3>
           <p>
             Generate scannable QR codes instantly! Simply input your text or
@@ -191,10 +188,7 @@
           </button>
         </div>
         <div class="project2">
-          <img
-            src="Images/kira-laktionov-_crVEAi7JPA-unsplash.jpg"
-            alt="project-image"
-          />
+          <img src="Images/1746094011224.jpg" alt="project-image" />
           <h3>Countdown Timer</h3>
           <p>
             Built with JavaScript, this upcoming product launch awareness page
@@ -213,17 +207,35 @@
           </button>
         </div>
         <div class="project3">
-          <img
-            src="Images/kira-laktionov-_crVEAi7JPA-unsplash.jpg"
-            alt="project-image"
-          />
-          <h3>Project Name</h3>
-          <p>description and tech used</p>
+          <img src="Images/1746096228651.jpg" alt="project-image" />
+          <h3>Recipe Page</h3>
+          <p>
+            A fully responsive web page showcasing a recipe and its preparation
+            method, nutritional value. It demonstrates my ability to create
+            visually appealing and user-friendly interfaces.
+          </p>
           <button>
-            <a href="http://127.0.0.1:5501/index.html#"></a>Live Repo
+            <a href="https://peace-divine.github.io/recipe-page/">Live Repo</a>
           </button>
           <button>
-            <a href="http://127.0.0.1:5501/index.html#"></a>GitHub Repo
+            <a href="https://github.com/Peace-Divine/recipe-page"
+              >GitHub Repo</a
+            >
+          </button>
+        </div>
+        <div class="project4">
+          <img src="Images/1746096466574.jpg" alt="project-image" />
+          <h3>OpenAI Chatbot Clone</h3>
+          <p>
+            AI model built using JavaScript. It Is capable of understanding and
+            responding to user input replicating the funtionality of OpenAI's
+            chatbot.
+          </p>
+          <button>
+            <a href="https://peace-divine.github.io/ChatBot-AI/">Live Repo</a>
+          </button>
+          <button>
+            <a href="https://github.com/Peace-Divine/ChatBot-AI">GitHub Repo</a>
           </button>
         </div>
       </div>
