--- a/index.html
+++ b/index.html
@@ -244,7 +244,11 @@
       <div class="contact-content">
         <h2>Contact Me</h2>
         <span>Lets work together</span>
-        <form id="contact-form">
+        <form
+          id="contact-form"
+          action="https://formspree.io/f/xblogjlz"
+          method="post"
+        >
           <label for="fullName">Full Name</label>
           <input type="text" placeholder="Surname FirstName" /><br />
           <label for="email">Email Address</label>
